[gd_scene load_steps=6 format=3 uid="uid://c4w8gxxk2e2kl"]

[ext_resource type="Script" path="res://ui/pause-menu/scripts/gameplay.gd" id="1_l2vqg"]

[sub_resource type="LabelSettings" id="LabelSettings_0nhpn"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_sshc7"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_iv7ha"]

[sub_resource type="LabelSettings" id="LabelSettings_djb4f"]
line_spacing = -3.0
font_size = 13

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2vqg")

[node name="Options" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(383, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -148.0
offset_right = 192.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
text = "GAMEPLAY SETTINGS"
label_settings = SubResource("LabelSettings_0nhpn")
horizontal_alignment = 1

[node name="sensitivity_header" type="Label" parent="Options"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Sensitivity"
label_settings = SubResource("LabelSettings_sshc7")
horizontal_alignment = 1
uppercase = true

[node name="ScaleBox" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="ScaleSlider" type="HSlider" parent="Options/ScaleBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.01
value = 0.1
ticks_on_borders = true

[node name="ScaleLabel" type="Label" parent="Options/ScaleBox"]
layout_mode = 2
text = "ERR"
label_settings = SubResource("LabelSettings_iv7ha")
horizontal_alignment = 3

[node name="fov_header" type="Label" parent="Options"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "FOV"
label_settings = SubResource("LabelSettings_sshc7")
horizontal_alignment = 1
uppercase = true

[node name="ScaleBox2" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="FOVSlider" type="HSlider" parent="Options/ScaleBox2"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
min_value = 11.0
max_value = 169.0
value = 11.0
rounded = true
ticks_on_borders = true

[node name="FOVLabel" type="Label" parent="Options/ScaleBox2"]
layout_mode = 2
text = "ERR"
label_settings = SubResource("LabelSettings_iv7ha")
horizontal_alignment = 3

[node name="crosshair_header" type="Label" parent="Options"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "CROSSHAIR Scale"
label_settings = SubResource("LabelSettings_sshc7")
horizontal_alignment = 1
uppercase = true

[node name="ScaleBox3" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="crosshairSlider" type="HSlider" parent="Options/ScaleBox3"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.01
ticks_on_borders = true

[node name="crosshairLabel" type="Label" parent="Options/ScaleBox3"]
layout_mode = 2
text = "ERR"
label_settings = SubResource("LabelSettings_iv7ha")
horizontal_alignment = 3

[node name="ScaleBox4" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="show?" type="CheckButton" parent="Options/ScaleBox4"]
layout_mode = 2
button_pressed = true
text = "show crosshair"

[node name="Label" type="Label" parent="Options/ScaleBox4"]
layout_mode = 2
text = "maybe you wanna use Crosshair X
or something ¯\\_(ツ)_/¯ idk"
label_settings = SubResource("LabelSettings_djb4f")

[node name="return" type="Button" parent="Options"]
layout_mode = 2
text = "EXIT"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[connection signal="pressed" from="Options/return" to="." method="_on_return_pressed"]
